# greenguardian-robot

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
moveit/: docker-compose.yml
src/: ros2.repos
src/guardain_simulation/: CMakeLists.txt  package.xml
src/guardain_simulation/config/: controllers.yaml  gz_controllers.yaml
src/guardain_simulation/launch/: manipulator.sim.launch.py  manipulator_sim.launch.py  sim.launch.py
src/guardain_simulation/urdf/: gazebo.urdf.xacro
src/guardian/: CMakeLists.txt  guardian_hardware_interface.xml  package.xml
src/guardian/config/: controllers.yaml  waypoints.yaml
src/guardian/include/guardian/: Constants.h  I2CPeripheral.h  pca9685_comm.h  pca9685_system.hpp  visibility_control.h
src/guardian/launch/: bringup_guardian.launch.py  send_trajectory.launch.py  test_joint_trajectory_controller.launch.py  test_position_controller.launch.py
src/guardian/reference_generator/: send_trajectory.cpp
src/guardian/src/: pca9685_system.cpp
src/guardian/src/guardian/: I2CPeripheral.cpp  pca9685_comm.cpp
src/guardian_control/: package.xml  setup.cfg  setup.py
src/guardian_control/guardian_control/: position_controller.py
src/guardian_description/: CMakeLists.txt  package.xml
src/guardian_description/launch/: view_manipulator.launch.py  view_robot.launch.py
src/guardian_description/ros2_control/: manipulator.ros2_control.xacro
src/guardian_description/rviz/: manipulator.rviz  view_robot.rviz
src/guardian_description/urdf/: manipulator.urdf.xacro  manipulator_macros.xacro  robot.urdf.xacro  robot_base.xacro  robot_core.xacro  ros2_control.xacro  wheel.xacro
src/guardian_description/urdf/core/: manipulator_macros.xacro  robot_base.xacro  wheel.xacro
src/guardian_description/urdf/extra/: DH.txt  dh.txt  manipulator.urdf
src/guardian_description/urdf/utils/: create_link.xacro  inertial_macros.xacro
src/guardian_moveit/: CMakeLists.txt  package.xml
src/guardian_moveit/launch/: moveit.launch.py  robot_model_and_robot_state_tutorial.launch.py
src/guardian_moveit/src/: moveit_interface.cpp  robot_model_and_robot_state_tutorial.cpp
src/guardian_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/guardian_moveit_config/config/: greenguardian.ros2_control.xacro  greenguardian.srdf  greenguardian.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/guardian_moveit_config/launch/: demo.launch.py  move_group.launch.py  move_group_interface_tutorial.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
